# cico-tracker

./: .env.example  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: db.rs  error.rs  main.rs
backend/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs
backend/src/models/: user.rs
db/: ddls.py
frontend/: Dockerfile  api_client.py  app.py  nginx.conf  theme.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_Log_Your_Crimes.py  2_The_Evidence.py  3_Chronicle_of_Poor_Decisions.py
