[package]
name = "cico-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
